--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,10 +55,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".view.LunchActivity"
-            android:label="Lunch">
-        </activity>
+        <activity android:name=".view.LunchActivity"></activity>
     </application>
 
 </manifest>
